--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>智算东西 - CantorAI</title>
+  <title>智算东西</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>智算东西 CantorAI</h1>
+    <h1>智算东西</h1>
     <nav>
       <a href="#product">平台</a>
       <a href="#solutions">解决方案</a>
@@ -52,14 +52,14 @@
   <section id="architecture">
     <h2>技术架构</h2>
     <p>
-      CantorAI 平台基于组合计算模型构建，支持资源抽象、任务调度解耦、异构设备统一协同。结合 Galaxy 流水线与 XLang 编程语言，支撑边端云一体化智能化运行。
+      字算东西组合计算平台基于组合计算模型构建，支持资源抽象、任务调度解耦、异构设备统一协同。结合 Galaxy 流水线与 XLang 编程语言，支撑边端云一体化智能化运行。
     </p>
   </section>
 
   <section id="about">
     <h2>关于我们</h2>
     <p>
-      智算东西（成都）科技有限公司是 CantorAI 在中国的研发与业务中心，专注于组合计算、AI 智能体与分布式平台的构建与应用。
+      智算东西（成都）科技有限公司专注于组合计算、AI 智能体与分布式平台的构建与应用。
     </p>
   </section>
 
