--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <section id="architecture">
     <h2>技术架构</h2>
     <p>
-      字算东西组合计算平台基于组合计算模型构建，支持资源抽象、任务调度解耦、异构设备统一协同。结合 Galaxy 流水线与 XLang 编程语言，支撑边端云一体化智能化运行。
+      智算东西组合计算平台基于组合计算模型构建，支持资源抽象、任务调度解耦、异构设备统一协同。结合 Galaxy 流水线与 XLang 编程语言，支撑边端云一体化智能化运行。
     </p>
   </section>
 
